added drop down box

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="searchBar">
                     <div class="location">
                         <span class="material-icons" id="icon">
-                            location_on
+                                location_on
                         </span>
                         <input type="text" id="bar1" placeholder="G-20/126 Sec-3 Rohini">
                         
@@ -35,9 +35,24 @@
                     <div class="logIn">
                         <img src="images/khushiJain.jpeg" class="profile_pic" >
                         <p id="me">Khushi</p>
-                        <span class="material-icons">
-                            arrow_drop_down
-                        </span>
+                        <div class="custom-select" >
+                            <select name="" id="">
+                                <!-- <option value="0"><span class="material-icons">
+                                    arrow_drop_down
+                                </span></option> -->
+                                <option value="0"></option>
+                                <option value="1">Profile</option>
+                                <option value="2">Notifications</option>
+                                <option value="3">BookMarks</option>
+                                <option value="4">Reviews</option>
+                                <option value="5">Network</option>
+                                <option value="6">Find Friends</option>
+                                <option value="7">Settings</option>
+                                <option value="8">Log Out</option>
+                                <!-- <option value="8">Log Out</option> -->
+                            </select>
+                        </div>
+                        
                     </div>
 
             </div>  
